--- a/z1_dz5.ipynb
+++ b/z1_dz5.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Заданные параметры:\n",
     "* Номинальная электрическая мощность: 250 МВт\n",
-    "* Начальное давление свежего пара: 12.8 МПа\n",
+    "* Начальное давление свежего пара: 23.5 МПа\n",
     "* Начальная температура свежено пара: 540 C\n",
     "* Конечное давление пара: 6.9 кПа\n",
     "* Температура питательной воды:  263 C\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "id": "c52b4f18",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "id": "63e2f1c4",
    "metadata": {},
    "outputs": [],
@@ -46,51 +46,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "9819b3a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "electrical_power = 250 * (10 ** 6)\n",
-    "p0 = 12.8 * MPa\n",
+    "p0 = 23.5 * MPa\n",
     "t0 = 540\n",
     "pk = 6.9 * kPa\n",
     "t_feed_water = 263\n",
     "p_feed_water = 1.4 * p0\n",
     "z = 8\n",
     "\n",
+    "internal_efficiency = 0.85\n",
     "mechanical_efficiency = 0.992\n",
-    "generator_efficiency = 0.99"
+    "generator_efficiency = 0.99\n",
+    "\n",
+    "delta_p0 = 0.05 * p0\n",
+    "\n",
+    "real_p0 = p0 - delta_p0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "id": "885ad1fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_points(p0, t0, pk, p_feed_water, t_feed_water):\n",
-    "    point_0 = gas(P=p0*unit, T=to_kelvin(t0))\n",
-    "    point_2 = gas(P=pk * unit, s=point_0.s)\n",
+    "def find_points(p0, real_p0, t0, pk, p_feed_water, t_feed_water):\n",
+    "    point_0t = gas(P=p0*unit, T=to_kelvin(t0))\n",
+    "    point_0 = gas(P=real_p0 * unit, h=point_0t.h)\n",
+    "    \n",
+    "    point_2t = gas(P=pk * unit, s=point_0t.s)\n",
+    "\n",
     "    point_k_water = gas(P=pk * unit, x=0)\n",
     "    point_feed_water = gas(P=p_feed_water * unit, T=to_kelvin(t_feed_water))\n",
-    "    return point_0, point_2, point_k_water, point_feed_water"
+    "\n",
+    "    heat_drop = (point_0t.h - point_2t.h) * internal_efficiency\n",
+    "    h_2 = point_0.h - heat_drop\n",
+    "    point_2 = gas(P=pk * unit, h=h_2)\n",
+    "    \n",
+    "    return point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "id": "13e1bb62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_ksi(point_0, point_2, point_k_water, point_feed_water, z):\n",
-    "    numenator_without = point_2.T * (point_0.s - point_k_water.s)\n",
+    "def calculate_ksi(point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water, z):\n",
+    "    numenator_without = point_2.T * (point_0t.s - point_k_water.s)\n",
     "    denumenator_without = (point_0.h - point_k_water.h)\n",
     "    without_part = 1 - (numenator_without / denumenator_without)\n",
     "    \n",
-    "    numenator_infinity = point_2.T * (point_0.s - point_feed_water.s)\n",
+    "    numenator_infinity = point_2.T * (point_0t.s - point_feed_water.s)\n",
     "    denumenator_infinity = (point_0.h - point_feed_water.h)\n",
     "    infinity_part = 1 - (numenator_infinity / denumenator_infinity)\n",
     "\n",
@@ -106,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "id": "35c305f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_estimated_heat_drop(point_0, point_2, point_k_water, point_feed_water,ksi):\n",
-    "    eff_num = (point_0.h - point_2.h) \n",
-    "    eff_denum = (point_0.h - point_2.h) + (point_0.h - point_k_water.h)\n",
+    "def calculate_estimated_heat_drop(point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water,ksi):\n",
+    "    eff_num = (point_0t.h - point_2.h) * internal_efficiency  \n",
+    "    eff_denum = (point_0t.h - point_2.h) * internal_efficiency + (point_0.h - point_k_water.h)\n",
     "\n",
     "    efficiency = (eff_num / eff_denum) * (1 / (1 - ksi))\n",
     "\n",
@@ -123,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "id": "ed0506f6",
    "metadata": {},
    "outputs": [],
@@ -141,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "d54d8b1b",
    "metadata": {},
    "outputs": [
@@ -150,14 +163,17 @@
      "output_type": "stream",
      "text": [
       "Значение коэфициетнта 0.668521593152601\n",
-      "Число оборотов 8\n"
+      "Число оборотов 8\n",
+      "По значению коэфициетта введите значения с графика 0.9\n",
+      "Массовый расход в турбину на входе 417.79293040104966\n",
+      "Массовый расход в конденсатор: 332.66383549506514\n"
      ]
     }
    ],
    "source": [
-    "point_0, point_2, point_k_water, point_feed_water = find_points(p0, t0, pk, p_feed_water, t_feed_water)\n",
-    "ksi = calculate_ksi(point_0, point_2, point_k_water, point_feed_water, z)\n",
-    "estimated_heat_drop, efficiency = calculate_estimated_heat_drop(point_0, point_2, point_k_water, point_feed_water,ksi)\n",
+    "point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water = find_points(p0, real_p0, t0, pk, p_feed_water, t_feed_water)\n",
+    "ksi = calculate_ksi(point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water, z)\n",
+    "estimated_heat_drop, efficiency = calculate_estimated_heat_drop(point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water,ksi)\n",
     "calculate_mass_flow(estimated_heat_drop, electrical_power, mechanical_efficiency, generator_efficiency, efficiency)\n"
    ]
   },
@@ -173,6 +189,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b2ecb96c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "921e1d27",
    "metadata": {},
    "outputs": [],
    "source": []
