--- a/z1_dz5.ipynb
+++ b/z1_dz5.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "id": "c52b4f18",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "id": "63e2f1c4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "id": "9819b3a4",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "id": "885ad1fb",
    "metadata": {},
    "outputs": [],
@@ -93,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "id": "13e1bb62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_ksi(point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water, z):\n",
+    "def calculate_ksi(point_0, point_0t, point_2, point_k_water, point_feed_water, z):\n",
     "    numenator_without = point_2.T * (point_0t.s - point_k_water.s)\n",
     "    denumenator_without = (point_0.h - point_k_water.h)\n",
     "    without_part = 1 - (numenator_without / denumenator_without)\n",
@@ -119,16 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "id": "35c305f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_estimated_heat_drop(point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water,ksi):\n",
-    "    eff_num = (point_0t.h - point_2.h) * internal_efficiency  \n",
-    "    eff_denum = (point_0t.h - point_2.h) * internal_efficiency + (point_0.h - point_k_water.h)\n",
+    "def calculate_estimated_heat_drop(point_0, point_0t, point_2t, point_k_water, point_feed_water,ksi):\n",
+    "    eff_num = (point_0t.h - point_2t.h) * internal_efficiency  \n",
+    "    eff_denum = (point_0.h - point_k_water.h)\n",
     "\n",
     "    efficiency = (eff_num / eff_denum) * (1 / (1 - ksi))\n",
+    "    print (\"КПД\",round(efficiency*100 ,4), \"%\")\n",
     "\n",
     "    estimated_heat_drop = efficiency * ((point_0.h - point_feed_water.h))\n",
     "    return estimated_heat_drop, efficiency"
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "id": "ed0506f6",
    "metadata": {},
    "outputs": [],
@@ -154,9 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "id": "d54d8b1b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -165,41 +168,21 @@
       "Значение коэфициетнта 0.668521593152601\n",
       "Число оборотов 8\n",
       "По значению коэфициетта введите значения с графика 0.9\n",
-      "Массовый расход в турбину на входе 417.79293040104966\n",
-      "Массовый расход в конденсатор: 332.66383549506514\n"
+      "КПД 43.524 %\n",
+      "Массовый расход в турбину на входе 268.79159697566763\n",
+      "Массовый расход в конденсатор: 167.88096533700653\n"
      ]
     }
    ],
    "source": [
     "point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water = find_points(p0, real_p0, t0, pk, p_feed_water, t_feed_water)\n",
-    "ksi = calculate_ksi(point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water, z)\n",
-    "estimated_heat_drop, efficiency = calculate_estimated_heat_drop(point_0, point_0t, point_2, point_2t, point_k_water, point_feed_water,ksi)\n",
+    "\n",
+    "ksi = calculate_ksi(point_0, point_0t, point_2, point_k_water, point_feed_water, z)\n",
+    "\n",
+    "estimated_heat_drop, efficiency = calculate_estimated_heat_drop(point_0, point_0t, point_2t, point_k_water, point_feed_water,ksi)\n",
+    "\n",
     "calculate_mass_flow(estimated_heat_drop, electrical_power, mechanical_efficiency, generator_efficiency, efficiency)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6faaade5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2ecb96c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "921e1d27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
